--- a/clase9/index.html
+++ b/clase9/index.html
@@ -51,7 +51,10 @@
 
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-6">
+                <div class=".scale-up-center {
+	-webkit-animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) forwards;
+	        animation: scale-up-center 0.4s cubic-bezier(0.390, 0.575, 0.565, 1.000) forwards;
+} col-lg-6">
                     <h1>Conoce a nuevos e interesantes cachorros cerca de tí.</h1>
                     <button type="button" class="btn btn-dark btn-lg download-button"><i
                             class="fab fa-apple"></i>Descargar</button>
